# segmentation_models.pytorch

./: .codecov.yml  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .style.yapf  .travis.yml  HALLOFFAME.md  LICENSE  MANIFEST.in  Makefile  README.md  __init__.py  cars_segmentation_camvid.py  conf.py  encoders_table.md  hubconf.py  index.rst  inference.py  mac_requirements.txt  main.py  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py  test.py  timm_encoders.txt  train.py  vis.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  codecov.yml  dependabot.yml  labeler.yml  release.yml  tests.yml
.github/workflows/: labeler.yml  pypi.yml  release.yml  stale.yaml  style.yml  tests.yml
docker/: Dockerfile  Dockerfile.dev
docs/: advanced.rst  api.rst  conf.py  encoders.rst  encoders_dpt.rst  encoders_timm.rst  index.rst  insights.rst  install.rst  losses.rst  metrics.rst  models.rst  quickstart.rst  requirements.txt  save_load.rst
examples/: binary_segmentation_buildings.py  binary_segmentation_intro.ipynb  binary_segmentation_intro_cpu.py  camvid_segmentation_multiclass.ipynb  cars segmentation (camvid).ipynb  cars segmentation (camvid).ipynb.ipynb  configure_timm_encoder.ipynb  convert_to_onnx.ipynb  dpt_inference_pretrained.ipynb  save_load_model_and_share_with_hf_hub.ipynb  segformer_inference_pretrained.ipynb  upernet_inference_pretrained.ipynb
film/: __init__.py  audit.py  decoder_blocks.py  generator.py  hooks.py  metadata_encoder.py  metadata_schema.py  wiring.py
licenses/: LICENSES.md  LICENSE_apple.md  LICENSE_nvidia.md
medsegm/base/: modules.py
medsegm/encoders/: mobilenet.py  timm_regnet.py  vgg.py
medsegm/losses/: focal.py  jaccard.py  soft_bce.py
medsegm/manet/: model.py
medsegm/unet/: decoder.py
medsegm/utils/: functional.py  metrics.py
misc/: generate_table.py  generate_table_timm.py  generate_test_models.py
notebooks/: SuperGlue_inference.ipynb
requirements/: docs.txt  min-cons.old  min-reqs.old  minimum.old  required.txt  style.txt  test.txt  tests.txt
scripts/: list_compatible_encoders.py
scripts/models-conversions/: dpt-original-to-smp.py  segformer-original-decoder-to-smp.py  upernet-hf-to-smp.py
segmentation_models_pytorch/: __init__.py  __version__.py
segmentation_models_pytorch/base/: __init__.py  decoders.py  encoder_decoder.py  heads.py  hub_mixin.py  initialization.py  model.py  module.py  modules.py  utils.py
segmentation_models_pytorch/bifpn/: __init__.py  decoder.py  model.py
segmentation_models_pytorch/common/: __init__.py  blocks.py  modules.py
segmentation_models_pytorch/datasets/: __init__.py  oxford_pet.py
segmentation_models_pytorch/decoders/: __init__.py
segmentation_models_pytorch/deeplabv3/: __init__.py  decoder.py  model.py
segmentation_models_pytorch/ecnoders/: __init__.py  densenet.py  dpn.py  inceptionresnetv2.py  resnet.py  senet.py  vgg.py
segmentation_models_pytorch/efficientunetplusplus/: __init__.py  decoder.py  model.py
segmentation_models_pytorch/encoders/: __init__.py  _base.py  _dpn.py  _efficientnet.py  _inceptionresnetv2.py  _inceptionv4.py  _legacy_pretrained_settings.py  _preprocessing.py  _senet.py  _utils.py  _xception.py  base.py  convnextv2.py  densenet.py  dpn.py  efficientnet.py  efficientnetv2.py  hrnet.py  inceptionresnetv2.py  inceptionv4.py  mix_transformer.py  mobilenet.py  mobilenet_v3.py  mobileone.py  resnest.py  resnet.py  sam.py  senet.py  timm_efficientnet.py  timm_gernet.py  timm_mobilenetv3.py  timm_regnet.py  timm_res2net.py  timm_resnest.py  timm_sknet.py  timm_universal.py  timm_vit.py  vgg.py  xception.py
segmentation_models_pytorch/fpn/: __init__.py  decoder.py  model.py
segmentation_models_pytorch/general/: __init__.py  decoders.py  encoder_decoder.py
segmentation_models_pytorch/hrnet/: __init__.py  config.py  decoder.py  model.py
segmentation_models_pytorch/layers/: activations.py  out_modules.py
segmentation_models_pytorch/linknet/: __init__.py  decoder.py  model.py
segmentation_models_pytorch/losses/: __init__.py  _constants.py  _functional.py  constants.py  dice.py  focal.py  focal_loss_optimisation_benchmarking.ipynb  focal_tversky.py  jaccard.py  lovasz.py  mcc.py  soft_bce.py  soft_ce.py  tversky.py  wing_loss.py
segmentation_models_pytorch/manet/: __init__.py  decoder.py  model.py
segmentation_models_pytorch/metrics/: __init__.py  functional.py
segmentation_models_pytorch/pan/: __init__.py  decoder.py  model.py
segmentation_models_pytorch/pspnet/: decoder.py  model.py
segmentation_models_pytorch/resunet/: __init__.py  decoder.py  model.py
segmentation_models_pytorch/resunetplusplus/: decoder.py  model.py
segmentation_models_pytorch/unet/: decoder.py  model.py
segmentation_models_pytorch/unet3plus/: __init__.py  decoder.py  model.py
segmentation_models_pytorch/unetplusplus/: __init__.py  decoder.py  model.py
segmentation_models_pytorch/utils/: __init__.py  base.py  functional.py  functions.py  losses.py  meter.py  metrics.py  train.py
segmentation_modules_pytorch/: __init__.py
segmentation_modules_pytorch/DSunetplusplus/: __init__.py  decoder.py  model.py
segmentation_modules_pytorch/encoders/: senet.py  (+3 more)
tests/: __init__.py  config.py  conftest.py  test_base.py  test_losses.py  test_metrics.py  test_models.py  test_preprocessing.py  test_sam.py  utils.py
torchseg/: __init__.py
utils/: augmentations.py  build_model.py  configuration.py  configuration.py.save  dataset.py  loss.py
(+157 files in other folders)
