[build-system]
requires = [
    # setuptools 61+ required for pyproject.toml support
    "setuptools>=61",
]
build-backend = "setuptools.build_meta"

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "torchseg"
description = "TorchSeg: Semantic Segmentation models for PyTorch"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Isaac Corley", email = "isaac.corley@utsa.edu"},
]
maintainers = [
    {name = "Isaac Corley", email = "isaac.corley@utsa.edu"},
]
keywords = ["pytorch", "deep learning", "machine learning", "computer vision", "semantic segmentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "einops>=0.7.0",
    "timm>=0.9.12",
    "torch>=1.13",
]
dynamic = ["version"]

[project.optional-dependencies]
style = [
    "ruff>=0.3.0"
]
tests = [
    "pytest>=7.3",
    "pytest-cov>=4",
]
all = [
    "torchseg[style,tests]",
]

[project.urls]
Homepage = "https://github.com/isaaccorley/torchseg"

[tool.coverage.report]
# Ignore warnings for overloads
# https://github.com/nedbat/coveragepy/issues/970#issuecomment-612602180
exclude_lines = [
    "pragma: no cover",
    "@overload",
]

[tool.pytest.ini_options]
norecursedirs = [
    ".ipynb_checkpoints",
    "data",
    "__pycache__",
]
testpaths = [
    "tests",
]
tmp_path_retention_policy = "failed"

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools.dynamic]
version = {attr = "torchseg.__version__"}

[tool.setuptools.package-data]
torchseg = ["py.typed"]

[tool.setuptools.packages.find]
include = ["torchseg*"]

[tool.ruff]
exclude = [
    # Extra files
    "data/",
    "images/",
    "logo/",
    "logs/",
    "output/",

    # Docs
    "docs/src/",

    # Spack
    ".spack-env/",

    # Python
    "build/",
    "dist/",
    ".cache/",
    ".mypy_cache/",
    ".pytest_cache/",
    "__pycache__/",
    "*.egg-info/",

    # Git
    ".git/",
    ".github/",
]

line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["tests", "torchseg"]