[build-system]
requires = ['setuptools>=61']
build-backend = 'setuptools.build_meta'

[project]
name = 'segmentation_models_pytorch'
description = 'Image segmentation models with pre-trained backbones. PyTorch.'
readme = 'README.md'
requires-python = '>=3.9'
license = {file = 'LICENSE'}
authors = [{name = 'Pavel Iakubovskii', email = 'qubvel@gmail.com'}]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
]
dependencies = [
    'efficientnet-pytorch>=0.6.1',
    'huggingface-hub>=0.24',
    'numpy>=1.19.3',
    'pillow>=8',
    'pretrainedmodels>=0.7.1',
    'six>=1.5',
    'timm>=0.9',
    'torch>=1.8',
    'torchvision>=0.9',
    'tqdm>=4.42.1',
]
dynamic = ['version']

[project.optional-dependencies]
docs = [
    'autodocsumm',
    'huggingface-hub',
    'six',
    'sphinx',
    'sphinx-book-theme',
]
test = [
    'pytest',
    'ruff',
]

[project.urls]
Homepage = 'https://github.com/qubvel-org/segmentation_models.pytorch'

[tool.ruff]
extend-include = ['*.ipynb']
fix = true

[tool.setuptools.dynamic]
version = {attr = 'segmentation_models_pytorch.__version__.__version__'}

[tool.setuptools.packages.find]
include = ['segmentation_models_pytorch*']
